--- a/2.Rmd
+++ b/2.Rmd
@@ -283,7 +283,7 @@ As we notices before quite a few variables have very skewed distributions. We fi
 ```{r}
 variables_to_log_transform <- c("WATER_DIST", "TOT_LVG_AREA", "LND_SQFOOT", "SPEC_FEAT_VAL",
                                 "RAIL_DIST", "OCEAN_DIST", "CNTR_DIST", "SUBCNTR_DI",
-                                "HWY_DIST", "age","SALE_PRC")
+                                "HWY_DIST", "age")
 
 
 for (var in variables_to_log_transform) {
@@ -296,7 +296,7 @@ for (var in variables_to_log_transform) {
 ```{r}
 columns_to_transform <- c("WATER_DIST", "TOT_LVG_AREA", "LND_SQFOOT", "SPEC_FEAT_VAL",
                           "RAIL_DIST", "OCEAN_DIST", "CNTR_DIST", "SUBCNTR_DI",
-                          "HWY_DIST", "age","SALE_PRC")
+                          "HWY_DIST", "age")
 
 for (col in columns_to_transform) {
 
@@ -319,8 +319,6 @@ for (col in columns_to_transform) {
        xlab = paste("Log(", col, ")", sep = ""), 
        col = "skyblue")
 }
-
-new_data_dummy <- df_with_zip
 ```
 
 #### Scaling numerical Columns
@@ -348,298 +346,90 @@ Now we have our final data.
 ```{r}
 data_clean <- df_with_zip
 data_clean <- data_clean %>% dplyr::select(-ZIP_CODE)
-new_data_dummy <- new_data_dummy %>% dplyr::select(-ZIP_CODE)
-new_data_dummy$SALE_PRC <- exp(new_data_dummy$SALE_PRC)
+factor_vars <- sapply(data_clean, is.factor)
+data_clean[factor_vars] <- lapply(data_clean[factor_vars], function(x) as.numeric(as.character(x)))
 ```
+
+```{r}
+data_clean <- data_clean[data_clean$SALE_PRC < 8000000, ]
+#data_scale <- scale(data_clean[ , -which(names(data_clean) == "SALE_PRC")])
+#data_scale <- as.data.frame(data_scale)
+#data_scale$SALE_PRC <- data_clean$SALE_PRC
+#data_clean <- data_scale
+#data_clean <- as.data.frame(data_clean)
+
+
+constant_cols <- sapply(data_clean, function(col) length(unique(col)) == 1)
+
+# Exclude constant columns
+data_clean <- data_clean[, !constant_cols]
+```
+
 
 ## 4
 
-```{r}
-set.seed(1234)
-n <- nrow(data_clean)
-train_valid <- sample(1:n, round((0.8) * n))
-test<-(1:n)[-train_valid]
 
-n_tv <- length(train_valid)
-train <- sample(1:n_tv, round((0.8) * n_tv))
-valid <- (1:n_tv)[-train]
+```{r}
+library(caret)
+
+set.seed(12345)
+
+train_valid_idx <- createDataPartition(data_clean$SALE_PRC, p = 0.7, list = FALSE)
+train_valid <- data_clean[train_valid_idx, ]
+test <- data_clean[-train_valid_idx, ]
+
+train_idx <- createDataPartition(train_valid$SALE_PRC, p = 0.7, list = FALSE)
+train <- train_valid[train_idx, ]
+valid <- train_valid[-train_idx, ]
 ```
 
 ```{r}
-model_lm <- lm(SALE_PRC ~., data = data_clean, subset = train)
-summary(model_lm)
-```
-
-```{r}
-resid <- exp(residuals(model_lm))
-n_train <- length(train)
-
-S <- (1/n_train)*sum(resid)
-
-valid_pred <- exp((predict(model_lm, newdata=data_clean[valid,])))*S
-
-valid_y <- exp(data_clean[valid,"SALE_PRC"])
-```
-
-
-
-```{r}
-
-
-plot(valid_y, valid_pred)
-abline(0, 1, col = "red", lwd = 2)
-
-n_valid <- length(valid)
-
-RMSE_valid <- sqrt((1/n_valid)*sum((valid_y - valid_pred)^2))
-print(RMSE_valid)
+weights <- train$SALE_PRC / max(train$SALE_PRC)
 ```
 
 
 ```{r}
-library(glmnet)
-model_ridge <- glmnet(as.matrix(data_clean[train,-1]),data_clean[train,1],alpha=0)
-```
-```{r}
-plot(model_ridge, xvar="lambda")
-```
-
-```{r}
-ridge_cv <- cv.glmnet(as.matrix(data_clean[train,-1]),data_clean[train,1],alpha=0)
-```
-
-```{r}
-plot(ridge_cv)
-```
-```{r}
-valid_pred_ridge <- predict(ridge_cv,newx=as.matrix(data_clean[valid,-1]),s="lambda.1se")
-
-plot(valid_y, exp(valid_pred_ridge))
-abline(0, 1, col = "red", lwd = 2)
-
-n_valid <- length(valid)
-
-RMSE_valid <- sqrt((1/n_valid)*sum((valid_y - exp(valid_pred_ridge))^2))
-print(RMSE_valid)
-```
-
-```{r}
-library(glmnet)
-model_lasso <- glmnet(as.matrix(data_clean[train,-1]),data_clean[train,1],alpha=1)
-```
-```{r}
-plot(model_lasso, xvar="lambda")
-```
-
-```{r}
-lasso_cv <- cv.glmnet(as.matrix(data_clean[train,-1]),data_clean[train,1],alpha=1)
-```
-
-```{r}
-plot(lasso_cv)
-```
-```{r}
-valid_pred_lasso <- predict(lasso_cv,newx=as.matrix(data_clean[valid,-1]),s="lambda.1se")
-
-
-
-
-plot(exp(valid_y), exp(pred_exp))
-abline(0, 1, col = "red", lwd = 2)
-
-n_valid <- length(valid)
-
-RMSE_valid <- sqrt(sum((exp(valid_y) - exp(pred_exp))^2)*1/n_valid)
-print(RMSE_valid)
+train$log_SALE_PRC <- log(train$SALE_PRC)
 ```
 
 
 ```{r}
-str(valid_pred_lasso)
-str(s2)
-```
+library(ranger)
 
-
-```{r}
-data_exp <- data_clean
-data_exp[,"SALE_PRC"] <- exp(data_exp[,"SALE_PRC"])
-
-
-```
-
-```{r}
-model_lm_exp <- lm(SALE_PRC~.,data=data_exp,subset = train)
-```
-```{r}
-library(MASS)
-
-bc <- boxcox(model_lm_exp)
-
-lambda_opt <- bc$x[which.max(bc$y)]
-
-lambda_opt
-y_transformed <- (data_exp$SALE_PRC^lambda_opt - 1)/lambda_opt
-
-lm_box <- lm(y_transformed~.,data=data_exp[,-1],subset = train)
-
-pred_trans <- predict(lm_box, newdata = data_exp[valid, -1])
-
-pred_original <- ((pred_trans * lambda_opt) + 1)^(1 / lambda_opt)
-
-plot(data_exp[valid,]$SALE_PRC, pred_original)
-abline(0, 1, col = "red", lwd = 2)
-
-rmse <- sqrt(mean((data_exp[valid,]$SALE_PRC - pred_original)^2))
-rmse
-```
-
-
-
-
-
-
-
-
-```{r}
-library(glmnet)
-lasso_cv <- cv.glmnet(as.matrix(data_exp[train,-1]),data_exp[train,1],alpha=1)
-```
-
-```{r}
-plot(lasso_cv)
-```
-```{r}
-valid_pred_lasso <- predict(lasso_cv,newx=as.matrix(data_exp[valid,-1]),s="lambda.1se")
-
-
-valid_y_exp <- data_exp[valid,1]
-
-plot(valid_y_exp, valid_pred_lasso)
-abline(0, 1, col = "red", lwd = 2)
-
-n_valid <- length(valid)
-
-RMSE_valid <- sqrt(sum((valid_y_exp - valid_pred_lasso)^2)*1/n_valid)
-print(RMSE_valid)
-```
-```{r}
-model_log <- glm(SALE_PRC~.,data=data_exp,subset=train)
-
-log_pred <- predict(model_log,newdata=data_exp[valid,])
-
-plot(valid_y_exp,log_pred)
-abline(0, 1, col = "red", lwd = 2)
-```
-
-
-```{r}
-library(randomForest)
-
-rf_model <- randomForest(SALE_PRC ~ ., data = data_exp[train,], ntree = 100)
-pred_rf <- predict(rf_model, newdata = data_exp[valid,])
-
-plot(data_exp$SALE_PRC[valid], pred_rf)
-abline(0,1,col="red")
-
-rmse <- sqrt(mean((data_exp$SALE_PRC[valid] - pred_rf)^2))
-rmse
-```
-
-
-```{r}
-library(quantregForest)
-
-data_exp_train <- data_exp[train,-1]
-data_exp_valid <- data_exp[valid,-1]
-sale_exp_train <- data_exp[train,1]
-
-qrf_model <- quantregForest(y = sale_exp_train, x = data_exp_train, ntree = 500)
-pred_med <- predict(qrf_model, newdata = data_exp_valid, what = 0.5)
-
-plot(data_exp$SALE_PRC[valid], pred_med)
-abline(0,1,col="red")
-```
-
-```{r}
-library(xgboost)
-
-x_train <- model.matrix(~ . - SALE_PRC, data = data_exp[train, ])
-x_valid <- model.matrix(~ . - SALE_PRC, data = data_exp[valid, ])
-
-y_train <- data_exp$SALE_PRC[train]
-y_valid <- data_exp$SALE_PRC[valid]
-
-dtrain <- xgb.DMatrix(data = x_train, label = y_train)
-dvalid <- xgb.DMatrix(data = x_valid, label = y_valid)
-
-params <- list(
-  objective = "reg:squarederror",  # for regression
-  eta = 0.1,                       # learning rate
-  max_depth = 6,                   # depth of each tree
-  subsample = 0.8,                 # subsample ratio of the training set
-  colsample_bytree = 0.8           # subsample ratio of columns when constructing each tree
+rf_model <- ranger(
+  formula = log_SALE_PRC ~ .,     # Formula
+  data = train,               # Training data
+  num.trees = 500,            # Number of trees
+  mtry = NULL, # Number of features per split
+  min.node.size = 5,          # Minimum size of terminal nodes
+  max.depth = 25,
+  case.weights = weights  # Maximum tree depth
 )
-
-set.seed(123)
-xgb_model <- xgb.train(
-  params = params,
-  data = dtrain,
-  nrounds = 500,              # number of boosting rounds (trees)
-  watchlist = list(train = dtrain, test = dvalid),
-  early_stopping_rounds = 50, # stop if no improvement for 50 rounds
-  print_every_n = 50
-)
-
-pred_xgb <- predict(xgb_model, newdata = dvalid)
-
-plot(y_valid, pred_xgb)
-abline(0,1,col="red")
-
-rmse <- sqrt(mean((y_valid - pred_xgb)^2))
-rmse
 ```
 
 ```{r}
-threshold <- 700000
-new_data_dummy$high_end_flag <- ifelse(new_data_dummy$SALE_PRC > threshold, "High", "Not_High")
-new_data_dummy$high_end_flag <- factor(new_data_dummy$high_end_flag)
+rf_pred <- exp(predict(rf_model, data = valid)$predictions)
 
-# First, train a classifier to predict if a home is high-end or not
-classifier <- randomForest(high_end_flag ~ . - SALE_PRC, data = new_data_dummy[train,])
 
-# Predict on valid set
-high_end_pred <- predict(classifier, newdata = new_data_dummy[valid,], type = "response")
+plot(valid$SALE_PRC, rf_pred)
+abline(0,1,col = "red", lwd = 2)
 
-valid_high <- new_data_dummy[valid,][high_end_pred == "High", ]
-valid_not_high <- new_data_dummy[valid,][high_end_pred == "Not_High", ]
-
-high_price_df <- subset(new_data_dummy[train, ], SALE_PRC > threshold)
-
-# Train separate regression models
-# Model for not-high properties
-rf_not_high <- randomForest(SALE_PRC ~ ., data = subset(new_data_dummy[train,], SALE_PRC <= threshold))
-
-str(high_price_df)
-
-hallo <- high_price_df[,-12]
-hallo <- hallo[,-15]
-# Regression for high
-rf_high <- lm(SALE_PRC ~ ., data = hallo)
-
-pred_not_high <- predict(rf_not_high, newdata = valid_not_high)
-pred_high <- predict(rf_high, newdata = valid_high)
-
-# Combine predictions
-pred_combined <- numeric(length(valid))
-pred_combined[high_end_pred == "Not_High"] <- pred_not_high
-pred_combined[high_end_pred == "High"] <- pred_high
+# Calculate RMSE (Root Mean Squared Error)
+rmse <- sqrt(mean((rf_pred - valid$SALE_PRC)^2))
+cat("RMSE:", rmse, "\n")
 ```
+
 ```{r}
-plot(data_exp$SALE_PRC[valid], pred_combined)
-abline(0,1,col="red")
+rf_pred <- exp(predict(rf_model, data = test)$predictions)
 
-rmse <- sqrt(mean((data_exp$SALE_PRC[valid] - pred_combined)^2))
-rmse
+
+plot(test$SALE_PRC, rf_pred)
+abline(0,1,col = "red", lwd = 2)
+
+# Calculate RMSE (Root Mean Squared Error)
+rmse <- sqrt(mean((rf_pred - test$SALE_PRC)^2))
+cat("RMSE:", rmse, "\n")
 ```
-```
+
+
 
