--- a/2_current_version.Rmd
+++ b/2_current_version.Rmd
@@ -382,8 +382,6 @@ train_idx <- createDataPartition(train_valid$SALE_PRC, p = 0.7, list = FALSE)
 train <- train_valid[train_idx, ]
 valid <- train_valid[-train_idx, ]
 
-#train$log_SALE_PRC <- log(train$SALE_PRC)
-#train <- train %>% dplyr::select(-SALE_PRC)
 ```
 We write a function to train the model since we will reuse it quite some times.
 ```{r}
@@ -466,30 +464,26 @@ results <- data.frame(
 
 for (depth in max_depth_values) {
   set.seed(1234)
-  # Train the ranger model with the current max.depth
   rf_model <- ranger(
-    formula = SALE_PRC ~ .,     # Formula
-    data = train,                  # Training data
-    max.depth = depth, # Current max.depth value
-    case.weights = weights # Case weights
+    formula = SALE_PRC ~ .,     
+    data = train,                  
+    max.depth = depth,
+    case.weights = weights
   )
-  
-  # Predict on the validation dataset
+
   rf_pred <- predict(rf_model, data = valid)$predictions
-  
-  # Calculate RMSE using the custom function
-  actual_values <- valid$SALE_PRC  # Assuming log-transformed target
+
+  actual_values <- valid$SALE_PRC  
   current_rmse <- rmse(actual = actual_values, predicted = rf_pred)
   
   ss_total <- sum((actual_values - mean(actual_values))^2)
   ss_residual <- sum((actual_values - rf_pred)^2)
   r_squared <- 1 - (ss_residual / ss_total)
   
-  n <- nrow(valid)                # Number of observations
-  p <- ncol(train) - 1            # Number of predictors (excluding target)
+  n <- nrow(valid)             
+  p <- ncol(train) - 1            
   adjusted_r_squared <- 1 - ((1 - r_squared) * (n - 1) / (n - p - 1))
-  
-  # Store the results
+
   results <- rbind(results, data.frame(max_depth = depth, rmse = current_rmse, r_squared = r_squared,
       adjusted_r_squared = adjusted_r_squared))
 }
@@ -541,73 +535,63 @@ model_final <- testing_25$model
 
 
 ```{r}
-# Make predictions on the test data
+
 rf_pred <- predict(model_final, data = test)$predictions
 
-# Plot the predictions vs actual values
 plot(test$SALE_PRC, rf_pred,
      xlab = "Actual Sale Price", 
      ylab = "Predicted Sale Price", 
      main = "Predicted vs Actual Sale Price")
 abline(0, 1, col = "red", lwd = 2)
 
-# Calculate RMSE
 rmse <- sqrt(mean((rf_pred - test$SALE_PRC)^2))
 cat("RMSE:", rmse, "\n")
 
-# Calculate R-squared
 ss_total <- sum((test$SALE_PRC - mean(test$SALE_PRC))^2)
 ss_residual <- sum((test$SALE_PRC - rf_pred)^2)
 r_squared <- 1 - (ss_residual / ss_total)
 cat("R-squared:", r_squared, "\n")
 
-# Calculate Adjusted R-squared
-n <- nrow(test)                 # Number of observations
-p <- ncol(test) - 1             # Number of predictors (excluding target)
+n <- nrow(test)
+p <- ncol(test) - 1 
 adjusted_r_squared <- 1 - ((1 - r_squared) * (n - 1) / (n - p - 1))
 cat("Adjusted R-squared:", adjusted_r_squared, "\n")
 
 ```
 
 ## Retrain 
+Combining the training and validation data to train the model again.
 ```{r}
-# Combine the train and validation datasets
+
 train_valid_combined <- rbind(train, valid)
 
-# Set the same hyperparameters used previously (e.g., max.depth, weights)
 set.seed(12345)
 final_rf_model <- ranger(
-  formula = SALE_PRC ~ .,     # Formula
-  data = train_valid_combined, # Combined train and validation data
-  max.depth = 25,             # Replace with the optimal max depth found
-  case.weights = (train_valid_combined$SALE_PRC / max(train_valid_combined$SALE_PRC))^(1), # Replace with weights if used
-  importance = "permutation"  # Importance type
+  formula = SALE_PRC ~ .,  
+  data = train_valid_combined, 
+  max.depth = 25, 
+  case.weights = (train_valid_combined$SALE_PRC / max(train_valid_combined$SALE_PRC))^(1), 
+  importance = "permutation" 
 )
 
-# Make predictions on the test data
 rf_pred_test <- predict(final_rf_model, data = test)$predictions
 
-# Plot the predictions vs actual values
 plot(test$SALE_PRC, rf_pred_test,
      xlab = "Actual Sale Price", 
      ylab = "Predicted Sale Price", 
      main = "Predicted vs Actual Sale Price")
 abline(0, 1, col = "red", lwd = 2)
 
-# Calculate RMSE
 rmse_test <- sqrt(mean((rf_pred_test - test$SALE_PRC)^2))
 
-# Calculate R-squared
 ss_total_test <- sum((test$SALE_PRC - mean(test$SALE_PRC))^2)
 ss_residual_test <- sum((test$SALE_PRC - rf_pred_test)^2)
 r_squared_test <- 1 - (ss_residual_test / ss_total_test)
 
-# Calculate Adjusted R-squared
-n_test <- nrow(test)                # Number of observations in the test set
-p_test <- ncol(train_valid_combined) - 1  # Number of predictors (excluding target)
+n_test <- nrow(test)
+p_test <- ncol(train_valid_combined) - 1
 adjusted_r_squared_test <- 1 - ((1 - r_squared_test) * (n_test - 1) / (n_test - p_test - 1))
 
-# Print the results
 cat("RMSE on Test Data:", rmse_test, "\n")
 cat("R-squared on Test Data:", r_squared_test, "\n")
 cat("Adjusted R-squared on Test Data:", adjusted_r_squared_test, "\n")
@@ -618,22 +602,21 @@ cat("Adjusted R-squared on Test Data:", adjusted_r_squared_test, "\n")
 
 
 ```{r}
-# Create a data frame to compare the two models
+
 comparison_results <- data.frame(
   Metric = c("RMSE", "R-squared", "Adjusted R-squared"),
-  Model_1 = c(rmse, r_squared, adjusted_r_squared),  # Results from the first model
-  Model_2 = c(rmse_test, r_squared_test, adjusted_r_squared_test)  # Results from the retrained model
+  Model_1 = c(rmse, r_squared, adjusted_r_squared), 
+  Model_2 = c(rmse_test, r_squared_test, adjusted_r_squared_test) 
 )
 
-# Convert to a readable format with no scientific notation
 comparison_results$Model_1 <- format(comparison_results$Model_1, scientific = FALSE, digits = 6)
 comparison_results$Model_2 <- format(comparison_results$Model_2, scientific = FALSE, digits = 6)
 
-# Print the table
 print(comparison_results)
 
 ```
-## Checking bias 5 f
+## 5.f
+Checking the protected attribute.
 ```{r}
 table(train_valid$avno60plus)
 ```
@@ -658,30 +641,30 @@ print(group_performance)
 
 ```
 
-## Baseline 
+## 5.d
 ## Mean
+Using mean for baseline.
 
 ```{r}
-# Calculate the mean of the target variable from the training set
+
 mean_price <- mean(train_valid_combined$SALE_PRC)
 
-# Use the mean predictor for all test data
+
 baseline_predictions <- rep(mean_price, nrow(test))
 
-# Calculate RMSE for the baseline model
+
 baseline_rmse <- sqrt(mean((test$SALE_PRC - baseline_predictions)^2))
 
-# Calculate R-squared for the baseline model
+
 ss_total_baseline <- sum((test$SALE_PRC - mean(test$SALE_PRC))^2)
 ss_residual_baseline <- sum((test$SALE_PRC - baseline_predictions)^2)
 baseline_r_squared <- 1 - (ss_residual_baseline / ss_total_baseline)
 
-# Calculate Adjusted R-squared for the baseline model
-n_baseline <- nrow(test)                # Number of observations in the test set
-p_baseline <- 0                         # No predictors in the baseline model
+n_baseline <- nrow(test)
+p_baseline <- 0 
 adjusted_r_squared_baseline <- 1 - ((1 - baseline_r_squared) * (n_baseline - 1) / (n_baseline - p_baseline - 1))
 
-# Print the baseline metrics
+
 cat("Baseline RMSE:", baseline_rmse, "\n")
 cat("Baseline R-squared:", baseline_r_squared, "\n")
 cat("Baseline Adjusted R-squared:", adjusted_r_squared_baseline, "\n")
@@ -689,44 +672,36 @@ cat("Baseline Adjusted R-squared:", adjusted_r_squared_baseline, "\n")
 
 ```
 ## Median 
+Using median for baseline.
 
 ```{r}
-# Calculate the median of the target variable from the training set
 median_price <- median(train$SALE_PRC)
 
-# Use the median predictor for all test data
 baseline_median_predictions <- rep(median_price, nrow(test))
 
-# Calculate RMSE for the median baseline model
 baseline_median_rmse <- sqrt(mean((test$SALE_PRC - baseline_median_predictions)^2))
 
-# Calculate R-squared for the median baseline model
 ss_total_median <- sum((test$SALE_PRC - mean(test$SALE_PRC))^2)
 ss_residual_median <- sum((test$SALE_PRC - baseline_median_predictions)^2)
 baseline_median_r_squared <- 1 - (ss_residual_median / ss_total_median)
 
-# Calculate Adjusted R-squared for the median baseline model
-n_median <- nrow(test)                # Number of observations in the test set
-p_median <- 0                         # No predictors in the median baseline model
+n_median <- nrow(test)
+p_median <- 0     
 adjusted_r_squared_median <- 1 - ((1 - baseline_median_r_squared) * (n_median - 1) / (n_median - p_median - 1))
 
-# Print the baseline  metrics
 cat("Baseline Median RMSE:", baseline_median_rmse, "\n")
 cat("Baseline Median R-squared:", baseline_median_r_squared, "\n")
 cat("Baseline Median Adjusted R-squared:", adjusted_r_squared_median, "\n")
 
 
 ```
+Checking the 90% and 10% quantile of the data.
 
 ```{r}
 quart <- quantile(data_clean$SALE_PRC, probs = 0.9, na.rm = TRUE)
 data_clean_1 <- data_clean[data_clean$SALE_PRC < quart, ]
 data_clean_2 <- data_clean[data_clean$SALE_PRC >= quart, ]
-#data_scale <- scale(data_clean[ , -which(names(data_clean) == "SALE_PRC")])
-#data_scale <- as.data.frame(data_scale)
-#data_scale$SALE_PRC <- data_clean$SALE_PRC
-#data_clean <- data_scale
-#data_clean <- as.data.frame(data_clean)
+
 
 
 constant_cols_2 <- sapply(data_clean_2, function(col) length(unique(col)) == 1)
@@ -737,7 +712,7 @@ data_clean_1 <- data_clean_1[, !constant_cols]
 ```
 
 
-## 6 a
+
 
 ```{r}
 library(caret)
@@ -752,42 +727,34 @@ train_valid_idx_2 <- createDataPartition(data_clean_2$SALE_PRC, p = 0.7, list = 
 train_valid_2 <- data_clean_2[train_valid_idx_2, ]
 test_2 <- data_clean_2[-train_valid_idx_2, ]
 
-
-#train$log_SALE_PRC <- log(train$SALE_PRC)
-#train <- train %>% dplyr::select(-SALE_PRC)
 ```
 
 ```{r}
 set.seed(12345)
 final_rf_model <- ranger(
-  formula = SALE_PRC ~ .,     # Formula
-  data = train_valid, # Combined train and validation data
-  max.depth = 25,             # Replace with the optimal max depth found
-  case.weights = (train_valid$SALE_PRC / max(train_valid$SALE_PRC))^(1), # Replace with weights if used
-  importance = "permutation"  # Importance type
+  formula = SALE_PRC ~ .,
+  data = train_valid,
+  max.depth = 25, 
+  case.weights = (train_valid$SALE_PRC / max(train_valid$SALE_PRC))^(1), 
+  importance = "permutation"
 )
 
-# Make predictions on the test data
 rf_pred_test <- predict(final_rf_model, data = test)$predictions
 
-# Plot the predictions vs actual values
 plot(test$SALE_PRC, rf_pred_test,
      xlab = "Actual Sale Price", 
      ylab = "Predicted Sale Price", 
      main = "Predicted vs Actual Sale Price")
 abline(0, 1, col = "red", lwd = 2)
 
-# Calculate RMSE
 rmse_test <- sqrt(mean((rf_pred_test - test$SALE_PRC)^2))
 
-# Calculate R-squared
 ss_total_test <- sum((test$SALE_PRC - mean(test$SALE_PRC))^2)
 ss_residual_test <- sum((test$SALE_PRC - rf_pred_test)^2)
 r_squared_test <- 1 - (ss_residual_test / ss_total_test)
 
-# Calculate Adjusted R-squared
-n_test <- nrow(test)                # Number of observations in the test set
-p_test <- ncol(train_valid_combined) - 1  # Number of predictors (excluding target)
+n_test <- nrow(test)    
+p_test <- ncol(train_valid_combined) - 1 
 adjusted_r_squared_test <- 1 - ((1 - r_squared_test) * (n_test - 1) / (n_test - p_test - 1))
 
 # Print the results
@@ -813,7 +780,6 @@ top_10 <- model_results(train_valid_2, test_2, maxdepths = 25,weights = (train_v
 sort(top_10$feature_importance,decreasing = TRUE)
 ```
 
-```
 
 
 
